added anyof for some fields as the fields support anyof object or string
